# inboxium

./: pyproject.toml
src/inboxium/: __init__.py  inboxium.py  types.py
