[project]
name = "inboxium"
version = "0.0.8"
dependencies = [
  "aiosmtpd>=1.4.6",
  "loguru>=0.7.3",
]
requires-python = ">=3.8"
authors = [
  {name = "Kenneth Reitz", email = "me@kennethreitz.com"},
  {name = "Melcikov Ivan", email = "vanamelcikov7275@gmail.com"},
]
description = "Eledant SMTP for Humans."
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/iamlostshe/inboxium"
Repository = "https://github.com/iamlostshe/inboxium.git"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Ошибки связанные с кирилицей
    "RUF001", "RUF002", "RUF003",

    # TODO
    "TD003", "FIX002",

    # Cравнение магических значений
    "PLR2004",

    # Работа с датой
    "DTZ005",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "ruff>=0.14.14",
]
